<resources>
    <string name="app_name">Places To Go</string>
    <string name="android_api_key">AIzaSyAWa5awr3yQvOln24gBkAQxCjEfkXBxFyI</string>
    <string name="facebook_application_id" translatable="false">407864189626329</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb407864189626329</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="not_registered">Not a member? Register now!</string>
    <string name="registered">Already registered. Login!</string>
    <string name="email_missing_message">Please enter email address!</string>
    <string name="password_missing_message">Please enter password!</string>
    <string name="password_too_short_message">Password too short, please enter at least 8 characters</string>
    <string name="auth_failed">Authentication failed. Invalid email or password!</string>
    <string name="signup_failed">Sign up failed</string>
    <string name="account">Account</string>
    <string name="signout">Sign out</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="no_internet_connection_message">No internet connection!</string>
    <string name="menu_favorite">Favorite</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_maps">Maps</string>
    <string name="menu_item_communication">Communicate</string>
    <string name="menu_share">Share</string>
    <string name="current_location">Current location</string>
    <string name="pref_unit_label">Unit</string>
    <string name="pref_unit_key" translatable="false">unit</string>
    <string name="pref_unit_miles_label">Miles</string>
    <string name="pref_unit_kilometers_label">Kilometers</string>
    <string name="pref_unit_miles_value" translatable="false">miles</string>
    <string name="pref_unit_kilometers_value" translatable="false">kilometers</string>
    <string name="pref_radius_label">Radius</string>
    <string name="pref_radius_key" translatable="false">radius</string>
    <string name="pref_radius_0.5_label">0.5</string>
    <string name="pref_radius_1.0_label">1.0</string>
    <string name="pref_radius_3.0_label">3.0</string>
    <string name="pref_radius_5.0_label">5.0</string>
    <string name="pref_radius_10_label">10</string>
    <string name="pref_radius_15_label">15</string>
    <string name="pref_radius_20_label">20</string>
    <string name="pref_radius_30_label">30</string>
    <string name="pref_radius_0.5_value" translatable="false">0.5</string>
    <string name="pref_radius_1.0_value" translatable="false">1</string>
    <string name="pref_radius_3.0_value" translatable="false">3</string>
    <string name="pref_radius_5.0_value" translatable="false">5</string>
    <string name="pref_radius_10_value" translatable="false">10</string>
    <string name="pref_radius_15_value" translatable="false">15</string>
    <string name="pref_radius_20_value" translatable="false">20</string>
    <string name="pref_radius_30_value" translatable="false">30</string>
    <string name="share_type">text/plain</string>
    <string name="share_via">Share via</string>
    <string name="app_share">Easy to find places with Places to go</string>
    <string name="place_share">is a good place to go. Place To Go is a great app</string>
    <string name="search_hint_text">Search any places here...</string>
    <string name="your_location_search">Your location</string>
    <string name="finding_location_progress">Finding your location...</string>
    <string name="no_places_to_be_displayed_in_map">No places to be displayed !!!</string>
    <string name="request_location_permission_message">Location permission is needed to get nearby places</string>
    <string name="OK">OK</string>
    <string name="location_permission_granted">Location permission was granted</string>
    <string name="location_permission_not_granted">Location permission was not granted</string>
    <string name="connection_failed">Connection failed</string>
    <string name="connection_suspended">Connection suspended</string>
    <string name="address_service_unavailable">Service unavailable</string>
    <string name="no_address_found">No address found</string>
    <string name="invalid_lat_lon">Invalid latitude and longitude</string>
    <string name="select_a_place_type">Select a place type</string>
    <string name="transition_thumbnail">transition</string>
    <string name="open_now">Open now</string>
    <string name="closed_now">Closed now</string>
    <string name="address">Address: </string>
    <string name="phone">Phone: </string>
    <string name="reviews">Reviews</string>
    <string name="review">Review</string>
    <string name="rating">Rating:</string>
    <string name="rate">Rating</string>
    <string name="review_text_too_short">Review is too short!</string>
    <string name="submit">Submit</string>
    <string name="seconds_ago">seconds ago</string>
    <string name="minute_ago">minute ago</string>
    <string name="minutes_ago">minutes ago</string>
    <string name="hour_ago">hour ago</string>
    <string name="hours_ago">hours ago</string>
    <string name="day_ago">day ago</string>
    <string name="days_ago">days ago</string>
    <string name="week_ago">week ago</string>
    <string name="weeks_ago">weeks ago</string>
    <string name="month_ago">month ago</string>
    <string name="months_ago">months ago</string>
    <string name="phone_text">Phone</string>
    <string name="map_text">Map</string>
    <string name="website_text">Website</string>
    <string name="uber_text">Uber</string>
    <string name="share_text">Share</string>
    <string name="phone_is_not_available_message">Phone is not available</string>
    <string name="website_is_not_available_message">Website is not available</string>
    <string name="uber_requires_install">You do not have Uber. Would you like to install?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="restaurant">Restaurant</string>
    <string name="cafe">Cafe</string>
    <string name="takeaway">Takeaway</string>
    <string name="convenience_store">Store</string>
    <string name="bus_station">Bus station</string>
    <string name="more">More</string>
    <string name="accounting_label">Accounting</string>
    <string name="airport_label">Airport</string>
    <string name="amusement_park_label">Amusement Park</string>
    <string name="aquarium_label">Aquarium</string>
    <string name="art_gallery_label">Art Gallery</string>
    <string name="atm_label">ATM</string>
    <string name="bakery_label">Bakery</string>
    <string name="bank_label">Bank</string>
    <string name="bar_label">Bar</string>
    <string name="beauty_salon_label">Beauty Salon</string>
    <string name="bicycle_store_label">Bicycle Store</string>
    <string name="book_store_label">Book Store</string>
    <string name="bowling_alley_label">Bowling Alley</string>
    <string name="bus_station_label">Bus Station</string>
    <string name="cafe_label">Cafe</string>
    <string name="campground_label">Campground</string>
    <string name="car_dealer_label">Car Dealer</string>
    <string name="car_rental_label">Car Rental</string>
    <string name="car_repair_label">Car Repair</string>
    <string name="car_wash_label">Car Wash</string>
    <string name="casino_label">Casino</string>
    <string name="cemetery_label">Cemetery</string>
    <string name="church_label">Church</string>
    <string name="city_hall_label">City Hall</string>
    <string name="clothing_store_label">Clothing Store</string>
    <string name="convenience_store_label">Convenience Store</string>
    <string name="courthouse_label">Courthouse</string>
    <string name="dentist_label">Dentist</string>
    <string name="department_store_label">Department Store</string>
    <string name="doctor_label">Doctor</string>
    <string name="electrician_label">Electrician</string>
    <string name="electronics_store_label">Electronics Store</string>
    <string name="embassy_label">Embassy</string>
    <string name="fire_station_label">Fire Station</string>
    <string name="florist_label">Florist</string>
    <string name="funeral_home_label">Funeral Home</string>
    <string name="furniture_store_label">Furniture Store</string>
    <string name="gas_station_label">Gas Station</string>
    <string name="gym_label">Gym</string>
    <string name="hair_care_label">Hair Care</string>
    <string name="hardware_store_label">Hardware Store</string>
    <string name="hindu_temple_label">Hindu Temple</string>
    <string name="home_goods_store_label">Home Goods Store</string>
    <string name="hospital_label">Hospital</string>
    <string name="insurance_agency_label">Insurance Agency</string>
    <string name="jewelry_store_label">Jewelry Store</string>
    <string name="laundry_label">Laundry</string>
    <string name="lawyer_label">Lawyer</string>
    <string name="library_label">Library</string>
    <string name="liquor_store_label">Liquor Store</string>
    <string name="local_government_office_label">Local Government Office</string>
    <string name="locksmith_label">Locksmith</string>
    <string name="lodging_label">Lodging</string>
    <string name="meal_delivery_label">Meal Delivery</string>
    <string name="meal_takeaway_label">Meal Takeaway</string>
    <string name="mosque_label">Mosque</string>
    <string name="movie_rental_label">Movie Rental</string>
    <string name="movie_theater_label">Movie Theater</string>
    <string name="moving_company_label">Moving Company</string>
    <string name="museum_label">Museum</string>
    <string name="night_club_label">Night Club</string>
    <string name="painter_label">Painter</string>
    <string name="park_label">Park</string>
    <string name="parking_label">Parking</string>
    <string name="pet_store_label">Pet Store</string>
    <string name="pharmacy_label">Pharmacy</string>
    <string name="physiotherapist_label">Physiotherapist</string>
    <string name="plumber_label">Plumber</string>
    <string name="police_label">Police</string>
    <string name="post_office_label">Post Office</string>
    <string name="real_estate_agency_label">Real Estate Agency</string>
    <string name="restaurant_label">Restaurant</string>
    <string name="roofing_contractor_label">Roofing Contractor</string>
    <string name="rv_park_label">Rv Park</string>
    <string name="school_label">School</string>
    <string name="shoe_store_label">Shoe Store</string>
    <string name="shopping_mall_label">Shopping Mall</string>
    <string name="spa_label">Spa</string>
    <string name="stadium_label">Stadium</string>
    <string name="storage_label">Storage</string>
    <string name="store_label">Store</string>
    <string name="subway_station_label">Subway Station</string>
    <string name="synagogue_label">Synagogue</string>
    <string name="taxi_stand_label">Taxi Stand</string>
    <string name="train_station_label">Train Station</string>
    <string name="transit_station_label">Transit Station</string>
    <string name="travel_agency_label">Travel Agency</string>
    <string name="university_label">University</string>
    <string name="veterinary_care_label">Veterinary Care</string>
    <string name="zoo_label">Zoo</string>
    <string name="place_types">Place types</string>
    <string name="search">Search</string>
    <string name="location_unavailable">Your location is unavailable</string>
    <string name="search_place_type_here">Search place type...</string>
    <string name="accounting_value">accounting</string>
    <string name="airport_value">airport</string>
</resources>